Project.html alignment issue fixes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@ $primary-font: "Montserrat", sans-serif;
 
 body {
     background: #121212;
+    user-select: none;
 }
 
 #progress-overlay.fade {
@@ -58,15 +59,29 @@ body {
     }
 }
 
+.logo-container {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 6px;
+    margin-left: 25px;
+
+    img {
+        width: 50px;
+        height: auto;
+    }
+}
+
 .socials-container {
     position: fixed;
     display: flex;
     top: 0;
-    padding: 0.5em 0.5em 1em 0.5em;
-    width: 10vw;
+    right: 0;
+    padding: 0.5em 0.5em 1em 0em;
+    width: 250px;
     z-index: 2;
-    justify-content: center;
-    align-items: center;
+    float: left;
 
     .socials-list {
         font-family: $primary-font;
@@ -76,10 +91,10 @@ body {
         flex-direction: row;
         gap: 1em;
         transition: all 300ms ease;
-        margin: 0px 40px 0px 0px;
 
         .socials-li {
 
+            /*
             & a {
                 color: $tertiary-color;
                 font-size: 1.5em;
@@ -93,6 +108,38 @@ body {
                     transform: scale(1.1);
                 }
             }
+            */
+
+            & a {
+                text-decoration: none;
+
+                .socials-li-div {
+                    display: flex;
+                    flex-direction: row;
+                    width: 30px;
+                    height: 30px;
+                    color: $tertiary-color;
+                    font-size: 1.5em;
+                    gap: 0.5em;
+                    transition: all 400ms ease;
+                    text-decoration: none;
+                    writing-mode: vertical-lr;
+
+                    overflow: hidden;
+
+                    div {
+                        font-size: 0.6em !important;
+                    }
+
+                    &:hover {
+                        height: 275px;
+
+                        i {
+                            color: $highlight-color;
+                        }
+                    }
+                }
+            }
         }
     }
 }
@@ -102,10 +149,12 @@ body {
     position: fixed;
     display: flex;
     top: 0;
+    left: 0;
     padding: 0.5em 0.5em 1em 0.5em;
     width: 100vw;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: start;
+    margin-top: 15px;
 
     .navbar-list {
         font-family: $primary-font;
@@ -113,9 +162,10 @@ body {
         list-style: none;
         display: flex;
         flex-direction: row;
-        gap: 5em;
+        gap: 4em;
         transition: all 300ms ease;
         margin: 0px 40px 0px 0px;
+        margin-left: 75px;
 
         .navbar-link {
 
